fixed the reset portion so that it resets the guessedletters array

--- a/assets/psychic-game.html
+++ b/assets/psychic-game.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <script src="../assets/Javascript/game.js"></script>
+
 </head>
 
-<body onload="set_win_loss();">
+<body onload="hold();">
 
     <div class="card mb-3">
         <img class="card-img-top" src="../assets/images/psychic.jpg" alt="Card image cap">
@@ -48,7 +49,7 @@
 
     <footer class="footer position-relative">
         <div class="container">
-            <span class="text-muted">Copyright Roberto Benites 2018</span>
+            <span class="text-muted text-center">Copyright Roberto Benites 2018</span>
         </div>
     </footer>
 
